--- a/proyek-machine-learning-dicoding/bank_customer_clustering_complete.ipynb
+++ b/proyek-machine-learning-dicoding/bank_customer_clustering_complete.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "cebd4c27",
+   "metadata": {},
+   "source": [
+    "# Proyek Data Science: Customer Clustering & Classification\n",
+    "\n",
+    "Notebook ini mencakup seluruh alur kerja mulai dari analisis data, pembersihan data, pemodelan clustering, interpretasi hasil, hingga membangun model klasifikasi berbasis hasil clustering.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Kriteria 1: Analisis Data dan EDA (Exploratory Data Analysis)"
@@ -10,8 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "b2a6d0b0",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -540,6 +549,7 @@
     }
    ],
    "source": [
+    "# --- Kriteria 1: Analisis Data ---\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -603,7 +613,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb15e1d8",
    "metadata": {},
    "source": [
     "## Kriteria 2: Pembersihan & Pra-Pemrosesan Data"
@@ -611,8 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "864f4a53",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -799,6 +807,7 @@
     }
    ],
    "source": [
+    "# --- Kriteria 2: Pembersihan dan Pra Pemrosesan Data ---\n",
     "print(\"Memulai Kriteria 2: Pembersihan dan Pra Pemrosesan Data\")\n",
     "\n",
     "# Salin dataframe asli agar data mentah tetap aman\n",
@@ -885,7 +894,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b53ea04",
    "metadata": {},
    "source": [
     "## Kriteria 3: Membangun Model Clustering (K-Means & PCA)"
@@ -893,8 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "5467ff08",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -932,6 +939,14 @@
       "✅ Model K-Means pada data PCA berhasil dilatih.\n",
       "✅ Model K-Means PCA telah disimpan sebagai 'PCA_model_clustering.h5'.\n",
       "\n",
+      "4. Visualisasi hasil clustering...\n",
+      "   - Silhouette Score: 0.372\n",
+      "✅ Model K-Means utama telah disimpan sebagai 'model_clustering.pkl'.\n",
+      "\n",
+      "3. Membangun model pembanding dengan PCA...\n",
+      "✅ Model K-Means pada data PCA berhasil dilatih.\n",
+      "✅ Model K-Means PCA telah disimpan sebagai 'PCA_model_clustering.h5'.\n",
+      "\n",
       "4. Visualisasi hasil clustering...\n"
      ]
     },
@@ -955,6 +970,7 @@
     }
    ],
    "source": [
+    "# --- Kriteria 3: Membangun Model Clustering ---\n",
     "try:\n",
     "    from yellowbrick.cluster import KElbowVisualizer\n",
     "except ImportError:\n",
@@ -1023,7 +1039,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b4408b96",
    "metadata": {},
    "source": [
     "## Kriteria 4: Interpretasi Hasil Clustering"
@@ -1031,8 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "92a0772f",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1311,6 +1325,7 @@
     }
    ],
    "source": [
+    "# --- Kriteria 4: Interpretasi Hasil Clustering ---\n",
     "print(\"\\nMemulai Kriteria 4: Interpretasi Hasil Clustering\")\n",
     "\n",
     "# 1. Mengembalikan data ke bentuk semula (inverse transform)\n",
@@ -1403,7 +1418,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a1163390",
    "metadata": {},
    "source": [
     "## Kriteria 5: Membangun Model Klasifikasi"
@@ -1411,8 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "26b78d09",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1454,6 +1467,38 @@
       "--- Melatih Logistic Regression ---\n",
       "              precision    recall  f1-score   support\n",
       "\n",
+      "   Cluster 0       0.98      1.00      0.99       107\n",
+      "   Cluster 1       1.00      0.99      1.00       106\n",
+      "   Cluster 2       1.00      0.99      1.00       108\n",
+      "   Cluster 3       1.00      1.00      1.00       105\n",
+      "\n",
+      "    accuracy                           1.00       426\n",
+      "   macro avg       1.00      1.00      1.00       426\n",
+      "weighted avg       1.00      1.00      1.00       426\n",
+      "\n",
+      "\n",
+      "--- Melatih Logistic Regression ---\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "   Cluster 0       0.71      0.79      0.75       107\n",
+      "   Cluster 1       0.69      0.58      0.63       106\n",
+      "   Cluster 2       0.93      0.84      0.88       108\n",
+      "   Cluster 3       0.78      0.89      0.83       105\n",
+      "\n",
+      "    accuracy                           0.77       426\n",
+      "   macro avg       0.78      0.77      0.77       426\n",
+      "weighted avg       0.78      0.77      0.77       426\n",
+      "\n",
+      "\n",
+      "✅ Model Decision Tree telah disimpan sebagai 'decision_tree_model.h5'.\n",
+      "✅ Model eksplorasi terbaik (Decision Tree) telah disimpan sebagai 'explore_DecisionTree_classification.h5'.\n",
+      "\n",
+      "3. Melakukan Hyperparameter Tuning pada Decision Tree...\n",
+      "(Model terbaik bukan Random Forest, tuning dilewati atau sesuaikan param_grid.)\n",
+      "\n",
+      "--- Proyek Selesai! ---\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
       "   Cluster 0       0.71      0.79      0.75       107\n",
       "   Cluster 1       0.69      0.58      0.63       106\n",
       "   Cluster 2       0.93      0.84      0.88       108\n",
@@ -1475,6 +1520,7 @@
     }
    ],
    "source": [
+    "# --- Kriteria 5: Membangun Model Klasifikasi ---\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -1572,7 +1618,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45bed659",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1598,5 +1643,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 5
+ "nbformat_minor": 2
 }
