--- a/proyek-machine-learning-dicoding/[Klasifikasi]_Submission_Akhir_BMLP_Izam_Rosiawan.ipynb
+++ b/proyek-machine-learning-dicoding/[Klasifikasi]_Submission_Akhir_BMLP_Izam_Rosiawan.ipynb
@@ -81,6 +81,177 @@
       "outputs": [
         {
           "data": {
+            "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+              "columns": [
+                {
+                  "name": "index",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "TransactionAmount",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "PreviousTransactionDate",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "TransactionType",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "Location",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "Channel",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "CustomerAge",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "CustomerOccupation",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "TransactionDuration",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "LoginAttempts",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "AccountBalance",
+                  "rawType": "float64",
+                  "type": "float"
+                },
+                {
+                  "name": "TransactionDate",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "AmountBin",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "AgeBin",
+                  "rawType": "int64",
+                  "type": "integer"
+                },
+                {
+                  "name": "Target",
+                  "rawType": "int64",
+                  "type": "integer"
+                }
+              ],
+              "ref": "f218a77b-1823-44c1-9fcb-8f878ce84fed",
+              "rows": [
+                [
+                  "0",
+                  "0.0072074419574224",
+                  "680",
+                  "1",
+                  "36",
+                  "0",
+                  "0.8387096774193548",
+                  "0",
+                  "0.2448275862068965",
+                  "0.0",
+                  "0.33683185966818",
+                  "105",
+                  "1",
+                  "1",
+                  "3"
+                ],
+                [
+                  "1",
+                  "0.1959402767282487",
+                  "1178",
+                  "1",
+                  "15",
+                  "0",
+                  "0.8064516129032258",
+                  "0",
+                  "0.4517241379310344",
+                  "0.0",
+                  "0.9180546275595326",
+                  "192",
+                  "2",
+                  "1",
+                  "3"
+                ],
+                [
+                  "2",
+                  "0.0656799645621075",
+                  "1262",
+                  "1",
+                  "23",
+                  "2",
+                  "0.0161290322580645",
+                  "3",
+                  "0.1586206896551724",
+                  "0.0",
+                  "0.0686373493117443",
+                  "41",
+                  "1",
+                  "2",
+                  "2"
+                ],
+                [
+                  "3",
+                  "0.0960158428225239",
+                  "818",
+                  "1",
+                  "33",
+                  "2",
+                  "0.1290322580645161",
+                  "3",
+                  "0.0517241379310344",
+                  "0.0",
+                  "0.569197956003802",
+                  "163",
+                  "1",
+                  "2",
+                  "3"
+                ],
+                [
+                  "4",
+                  "0.0478880579513771",
+                  "635",
+                  "1",
+                  "28",
+                  "0",
+                  "0.0",
+                  "3",
+                  "0.5586206896551724",
+                  "0.0",
+                  "0.0457378431027227",
+                  "13",
+                  "1",
+                  "2",
+                  "3"
+                ]
+              ],
+              "shape": {
+                "columns": 14,
+                "rows": 5
+              }
+            },
             "text/html": [
               "<div>\n",
               "<style scoped>\n",
