--- a/proyek-machine-learning-dicoding/[Clustering]_Submission_Akhir_BMLP_Izam_Rosiawan.ipynb
+++ b/proyek-machine-learning-dicoding/[Clustering]_Submission_Akhir_BMLP_Izam_Rosiawan.ipynb
@@ -4322,7 +4322,7 @@
         "  - **Rata-rata (mean) TransactionAmount:** 0.1328  \n",
         "  - **Rata-rata (mean) CustomerAge:** 0.4081  \n",
         "  - **Rata-rata (mean) AccountBalance:** 0.3286  \n",
-        "  - **Rata-rata (mean) TransactionDuration:** 1.5131  \n",
+        "  - **Rata-rata (mean) TransactionDuration:** 0.3665  \n",
         "  - **Rata-rata (mean) LoginAttempts:** 0.0  \n",
         "  - **Analisis:** Cluster ini terdiri dari nasabah yang aktif melakukan transaksi dengan saldo akun dan jumlah transaksi yang relatif sedang. Usia nasabah cenderung lebih muda dan hampir tidak ada upaya login berulang, menandakan aktivitas normal dan minim risiko anomali. Cocok untuk promosi produk digital banking dan reward loyalitas.\n",
         "\n",
@@ -4330,7 +4330,7 @@
         "  - **Rata-rata (mean) TransactionAmount:** 0.1276  \n",
         "  - **Rata-rata (mean) CustomerAge:** 0.4354  \n",
         "  - **Rata-rata (mean) AccountBalance:** 0.3454  \n",
-        "  - **Rata-rata (mean) TransactionDuration:** 1.5027  \n",
+        "  - **Rata-rata (mean) TransactionDuration:** 0.3785  \n",
         "  - **Rata-rata (mean) LoginAttempts:** 0.0  \n",
         "  - **Analisis:** Cluster ini terdiri dari nasabah dengan saldo akun yang lebih tinggi dan usia sedikit lebih dewasa. Transaksi cenderung terjadi di akhir bulan, dengan aktivitas login yang stabil. Cocok untuk penawaran produk tabungan dan investasi jangka panjang.\n",
         "\n",
@@ -4338,7 +4338,7 @@
         "  - **Rata-rata (mean) TransactionAmount:** 0.1407  \n",
         "  - **Rata-rata (mean) CustomerAge:** 0.4383  \n",
         "  - **Rata-rata (mean) AccountBalance:** 0.3349  \n",
-        "  - **Rata-rata (mean) TransactionDuration:** 1.5829  \n",
+        "  - **Rata-rata (mean) TransactionDuration:** 0.3805  \n",
         "  - **Rata-rata (mean) LoginAttempts:** 0.0  \n",
         "  - **Analisis:** Cluster ini berisi nasabah usia dewasa dengan pola transaksi rutin dan saldo akun yang stabil. Aktivitas login tetap rendah, menandakan keamanan dan konsistensi transaksi. Cocok untuk promosi produk reguler dan layanan personal banking.\n",
         "\n",
@@ -4346,7 +4346,7 @@
         "  - **Rata-rata (mean) TransactionAmount:** 0.1318  \n",
         "  - **Rata-rata (mean) CustomerAge:** 0.4361  \n",
         "  - **Rata-rata (mean) AccountBalance:** 0.3352  \n",
-        "  - **Rata-rata (mean) TransactionDuration:** 1.5284  \n",
+        "  - **Rata-rata (mean) TransactionDuration:** 0.3747  \n",
         "  - **Rata-rata (mean) LoginAttempts:** 0.0  \n",
         "  - **Analisis:** Cluster ini didominasi nasabah muda yang aktif bertransaksi secara digital dengan saldo akun sedang. Pola transaksi menunjukkan preferensi terhadap layanan digital banking dan transaksi cepat. Cocok untuk promosi aplikasi mobile dan fitur digital banking terbaru."
       ]
@@ -5509,11 +5509,11 @@
       "source": [
         "## Menjelaskan karakteristik tiap cluster berdasarkan rentangnya setelah inverse.\n",
         "1. **Cluster 0: Nasabah Aktif & Transaksi Terkini**:\n",
-        "  - **Rata-rata (mean) TransactionAmount:** 245.06  \n",
-        "  - **Rata-rata (mean) CustomerAge:** 44.99  \n",
-        "  - **Rata-rata (mean) AccountBalance:** 5238.94  \n",
-        "  - **Rata-rata (mean) TransactionDuration:** 119.77  \n",
-        "  - **Rata-rata (mean) LoginAttempts:** 1.0  \n",
+        "  - **Rata-rata (mean) TransactionAmount:** 0.1276 → 245.06  \n",
+        "  - **Rata-rata (mean) CustomerAge:** 0.4354 → 44.99  \n",
+        "  - **Rata-rata (mean) AccountBalance:** 0.3454 → 5238.94  \n",
+        "  - **Rata-rata (mean) TransactionDuration:** 1.5027 → 119.77  \n",
+        "  - **Rata-rata (mean) LoginAttempts:** 0.0 → 1.0  \n",
         "  - **Rata-rata (mean) AmountBin:** 1.03  \n",
         "  - **Rata-rata (mean) AgeBin:** 1.0  \n",
         "  - **Mode PreviousTransactionDate:** 2023-12-28 17:31:03  \n",
