update output display for model evaluation and feature importance in Titanic survival prediction notebook

--- a/data-mining-titanic/data-mining-titanic.ipynb
+++ b/data-mining-titanic/data-mining-titanic.ipynb
@@ -1,13 +1,45 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "83dedfa1d53d1c35",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-06-24T11:39:37.435969Z",
      "start_time": "2025-06-24T11:39:36.998301Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Akurasi: 0.8212290502793296\n",
+      "\n",
+      "Classification Report:\n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.83      0.87      0.85       105\n",
+      "           1       0.80      0.76      0.78        74\n",
+      "\n",
+      "    accuracy                           0.82       179\n",
+      "   macro avg       0.82      0.81      0.81       179\n",
+      "weighted avg       0.82      0.82      0.82       179\n",
+      "\n",
+      "\n",
+      "Feature Importance:\n",
+      "    feature  importance\n",
+      "5      Fare    0.272032\n",
+      "1       Sex    0.266227\n",
+      "2       Age    0.252044\n",
+      "0    Pclass    0.085496\n",
+      "3     SibSp    0.052776\n",
+      "4     Parch    0.037304\n",
+      "6  Embarked    0.034121\n"
+     ]
+    }
+   ],
    "source": [
     "# Penyelesaian Studi Kasus: Prediksi Keselamatan Penumpang Titanic\n",
     "\n",
@@ -58,47 +90,17 @@
     "feature_importance = pd.DataFrame({'feature': features, 'importance': importances})\n",
     "print(\"\\nFeature Importance:\")\n",
     "print(feature_importance.sort_values(by=\"importance\", ascending=False))"
-   ],
-   "id": "83dedfa1d53d1c35",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Akurasi: 0.8212290502793296\n",
-      "\n",
-      "Classification Report:\n",
-      "               precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.83      0.87      0.85       105\n",
-      "           1       0.80      0.76      0.78        74\n",
-      "\n",
-      "    accuracy                           0.82       179\n",
-      "   macro avg       0.82      0.81      0.81       179\n",
-      "weighted avg       0.82      0.82      0.82       179\n",
-      "\n",
-      "\n",
-      "Feature Importance:\n",
-      "    feature  importance\n",
-      "5      Fare    0.272032\n",
-      "1       Sex    0.266227\n",
-      "2       Age    0.252044\n",
-      "0    Pclass    0.085496\n",
-      "3     SibSp    0.052776\n",
-      "4     Parch    0.037304\n",
-      "6  Embarked    0.034121\n"
-     ]
-    }
-   ],
-   "execution_count": 7
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "code",
-   "outputs": [],
    "execution_count": null,
-   "source": "",
-   "id": "cd87c05142cc07a5"
+   "id": "cd87c05142cc07a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#aha"
+   ]
   }
  ],
  "metadata": {
