Add placeholder text to the Titanic prediction notebook

--- a/data-mining-titanic/data-mining-titanic.ipynb
+++ b/data-mining-titanic/data-mining-titanic.ipynb
@@ -98,7 +98,9 @@
    "id": "cd87c05142cc07a5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "aaaa"
+   ]
   }
  ],
  "metadata": {
